Saving the User Name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <div class="js-clock">
       <h1>00:00</h1>
     </div>
-    <script src="index.js"></script>
+    <form class="js-form form">
+      <input type="text" placeholder="What is your name?" />
+    </form>
+    <h4 class="js-greetings greetings"></h4>
+    <script src="gretting.js"></script>
     <script src="clock.js"></script>
   </body>
 </html>
