--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
       <input type="text" placeholder="What is your name?" />
     </form>
     <h4 class="js-greetings greetings"></h4>
+    <form class="js-toDoForm">
+      <input type="text" placeholder="Write a todo" />
+    </form>
+    <ul class="js-toDoList"></ul>
     <script src="gretting.js"></script>
+    <script src="todo.js"></script>
     <script src="clock.js"></script>
   </body>
 </html>
