--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
       <input type="text" placeholder="Write a todo" />
     </form>
     <ul class="js-toDoList"></ul>
+    <span class="js-weather"></span>
     <script src="gretting.js"></script>
     <script src="todo.js"></script>
     <script src="clock.js"></script>
     <script src="bg.js"></script>
+    <script src="weather.js"></script>
   </body>
 </html>
